src/objects/Customer_Part_Number__c/Customer_Part_Number__c.object-meta.xml
<CustomObject>
    <description>Object to hold information about customer part number and related them to Customer and Product. To be updated by Integration.</description>
    <label>Customer Part Number</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Count</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Part Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>