src/objects/Customer_Part_Number__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to link customer part number with Account.</description>
    <label>Customer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value in Field Customer does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>notContain</operation>
            <value>Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Part Numbers</relationshipLabel>
    <relationshipName>Customer_Part_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>