src/objects/Customer_Part_Number__c/fields/Finisar_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Finisar_Part_Number__c</fullName>
    <label>Finisar Part Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>