src/objects/Customer_Part_Number__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Customer Part Numbers</relationshipLabel>
    <relationshipName>Customer_Part_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>